Worked on footer and header boilers

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div>
         <img src="{{ '/assets/logo.svg' | relative_url }}" />
-        <p class="pt-28 sb">Mello</p>
+        <p class="px-28 sb">Mello</p>
     </div>
-    <p class="pt-12 m">© 2020 Mello and individual contributors. Code licensed under the Apache 2.0 license. All other material is licensed under the CC BY-NC-ND license.</p>
+    <p class="px-12 m">© 2020 Mello and individual contributors. Code licensed under the Apache 2.0 license. All other material is licensed under the CC BY-NC-ND license.</p>
 </footer>
