Changed from page to global descriptions via config, added get-started section and page section boilerplates, removed blankspace in readme, added homepage MD data, added get-started text colours

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -10,3 +10,12 @@ html { font-family: 'Inter', sans-serif; }
 .m { font-weight: 500; }
 .sb { font-weight: 600;}
 .b { font-weight: bold; }
+
+.comingsoon {
+    color: rgba(0,0,0,.5);
+}
+.comingsoon-g {
+    color: rgba(0,0,0,.5);
+    opacity: 0.5;
+}
+.g { color: rgba(0,0,0,.6); }
