--- a/_layout/default.html
+++ b/_layout/default.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>{{page.title}} - {{site.title}}</title>
         <meta property="og:title" content="{{page.title}} - {{site.title}}" />
-        <meta name="description" content="{{page.description}}" />
+        <meta name="description" content="{{site.description}}" />
         <link rel="stylesheet" href="{{ '/assets/main.css' | realtive_url }}" />
         <link rel="shortcut icon" href="{{ '/favicon.ico' }}" />
     </head>
