Finished more boilerplates, removed headerLink attribute, added button CSS, and comments to font CSS

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,15 @@
 <header class="foldHeader">
     <div class="container">
         {% include nav.html %}
-        
+        <div class="section">
+            <div class="section-l">
+                <img src="" rel="" />
+            </div>
+            <div class="section-r">
+                <p class="sb head-text">{{ site.name }}</p>
+                <p class="sb px-20">{{ site.description }}</p>
+                <a href="#download" class="button">Download</a>
+            </div>
+        </div>
     </div>
 </header>
