--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,6 +4,16 @@
 @charset 'utf-8';
 @import 'font';
 
+// Header and Nav
+.button {
+    background: #6EE7C8;
+    padding: 5px 20px 5px 20px;
+}
+
+.nav {
+
+}
+
 // Footer
 
 .footer {
