--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,13 +1,16 @@
 <nav class="nav">
-    <a href="{{ '/' | relative_url }}"><img class="nav_logo" src="{{ '/assets/logo.svg' /}}" /></a>
     <ul class="links">
-        {% for item in site.nav %}
-            {% if item.url contains '://' %}
-                {% assign url = item.url %}
-            {% else %}
-                {% assign url = item.url | relative_url %}
-            {% endif %}
-            <li><a class="navLink" href="{{url}}">{{item.title}}</a></li>
-        {% endfor %}
+        <li class="link">
+            <a class="navLink" href="/">Home</a>
+        </li>
+        <li class="link">
+            <a class="navLink" href="/team">Team</a>
+        </li>
+        <li class="link">
+            <a class="navLink" href="https://github.com/Mello-App">GitHub</a>
+        </li>
+        <li class="link">
+            <a class="navLink" href="#download">Download</a>
+        </li>
     </ul>
 </nav>
