--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         <title>{{page.title}} - {{site.title}}</title>
         <meta property="og:title" content="{{page.title}} - {{site.title}}" />
         <meta name="description" content="{{site.description}}" />
-        <link rel="stylesheet" href="{{ '/assets/main.css' | realtive_url }}" />
+        <link rel="stylesheet" href="{{ '/assets/styles.css' | realtive_url }}" />
         <link rel="shortcut icon" href="{{ '/favicon.ico' }}" />
     </head>
     <body>
