--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
             <a class="navLink" href="https://github.com/Mello-App">GitHub</a>
         </li>
         <li class="link">
-            <a class="navLink" href="#download">Download</a>
+            <a class="button" href="#download">Download</a>
         </li>
     </ul>
 </nav>
