--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
                 <img src="" rel="" />
             </div>
             <div class="section-r">
-                <p class="sb head-text">{{ site.tile }}</p>
+                <p class="sb head-text">{{ site.title }}</p>
                 <p class="sb px-20">{{ site.description }}</p>
                 <a href="#download" class="button">Download</a>
             </div>
