Split sections into includes and added link references

--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -1,6 +1,6 @@
 <div class="section">
     <div class="section-l">
-        <img src="" rel="" />
+        <img src="/assets/img/004.svg" rel="App on Android and iOS Preview" />
     </div>
     <div class="section-r">
         <p class="px-28 sb">Get started</p>
@@ -9,14 +9,14 @@
                 <p class="px-14 m">Download the app</p>
                 <div>
                     <a>
-                        <img src="" rel="">
+                        <img src="/assets/img/android.svg" rel="Download for Android">
                         <p class="px-12 m">Android</p>
                         <p class="px-8 m g">currently in public beta</p>
                     </a>
                 </div>
                 <div>
                     <a>
-                        <img src="" rel="">
+                        <img src="/assets/img/iphone.svg" rel="Download for iOS">
                         <p class="px-12 m comingsoon">iPhone</p>
                         <p class="px-8 m comingsoon-g">coming soon</p>
                     </a>
@@ -26,7 +26,7 @@
                 <p class="px-14 m">Use the webapp</p>
                 <div>
                     <a>
-                        <img src="" rel="">
+                        <img src="/assets/img/launch.svg" rel="Use the Web App">
                         <p class="px-12 m">Launch now</p>
                     </a>
                 </div>
