--- a/_includes/section.html
+++ b/_includes/section.html
@@ -1,10 +1,8 @@
-{% for item in page.section %}
-    <div class="section">
-        <div class="section-l">
-            {{Item.l}}
-        </div>
-        <div class="section-r">
-            {{item.r}}
-        </div>
+<div class="section">
+    <div class="section-l">
+        {{include.left}}
     </div>
-{% endfor %}
+    <div class="section-r">
+        {{include.right}}
+    </div>
+</div>
