Added footer, navigation, and header text styling. Added missing image references

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,11 @@
         {% include nav.html %}
         <div class="section">
             <div class="section-l">
-                <img src="" rel="" />
+                <img src="/assets/img/header.svg" rel="Logo on Phone" />
             </div>
             <div class="section-r">
                 <p class="sb head-text">{{ site.title }}</p>
-                <p class="sb px-20">{{ site.description }}</p>
+                <p class="sb head-subtext">{{ site.description }}</p>
                 <a href="#download" class="button">Download</a>
             </div>
         </div>
