--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div>
-        <img src="{{ '/assets/logo.svg' | relative_url }}" />
-        <p class="px-28 sb">Mello</p>
+        <img src="{{ '/assets/img/logo_w.svg' | relative_url }}" />
+        <p class="px-28 sb footer-t">Mello</p>
     </div>
-    <p class="px-12 m">© 2020 Mello and individual contributors. Code licensed under the Apache 2.0 license. All other material is licensed under the CC BY-NC-ND license.</p>
+    <p class="px-12 m footer-g">© 2020 Mello and individual contributors. Code licensed under the Apache 2.0 license. All other material is licensed under the CC BY-NC-ND license.</p>
 </footer>
