Added section bgs

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -44,3 +44,8 @@ html, body { height: 100%; } /* Preparation for the folding header */
     background: #111;
     top: 30px; left: 100px;
 }
+
+// Sections
+
+.d-sec { background: #eee; }
+.l-sec { background: #fff; }
