Made get-started a dark section

--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -1,4 +1,4 @@
-<div class="section">
+<div class="section d-sec">
     <div class="section-l">
         <img src="/assets/img/004.svg" rel="App on Android and iOS Preview" />
     </div>
