Hero + CSS rework
- Hero finished
- In process of simplifying CSS classes for universality
- Using h1 and h3 where possible
- Gemfile updated from install

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div>
         <img src="{{ '/assets/img/logo_w.svg' | relative_url }}" />
-        <p class="px-28 sb footer-t">Mello</p>
+        <h3 class="footer">Mello</h3>
     </div>
-    <p class="px-12 m footer-g">© 2020 Mello and individual contributors. Code licensed under the Apache 2.0 license. All other material is licensed under the CC BY-NC-ND license.</p>
+    <p class="footer">© 2020 Mello and individual contributors. Code licensed under the Apache 2.0 license. All other material is licensed under the CC BY-NC-ND license.</p>
 </footer>
