--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,11 @@
-<header class="foldHeader">
-    <div class="container">
-        {% include nav.html %}
-        <div class="section">
-            <div class="section-l">
-                <img src="/assets/img/header.svg" rel="Logo on Phone" />
-            </div>
-            <div class="section-r">
-                <p class="sb head-text">{{ site.title }}</p>
-                <p class="sb head-subtext">{{ site.description }}</p>
-                <a href="#download" class="button">Download</a>
-            </div>
+<header class="heroBG">
+    {% include nav.html %}
+    <div class="hero">
+        <img class="heroImage" src="/assets/img/header.svg" rel="Mello logo on phone" />
+        <div class="heroContent">
+            <h1 class="hero">{{ site.title }}</h1>
+            <h3 class="hero">{{ site.description }}</h3>
+            <a class="downloadButton" href="#download">Download</a>
         </div>
     </div>
 </header>
