--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,16 +1,16 @@
-<nav class="nav">
+<nav>
     <ul class="links">
-        <li class="link">
+        <li>
             <a class="navLink" href="/">Home</a>
         </li>
-        <li class="link">
+        <li>
             <a class="navLink" href="/team">Team</a>
         </li>
-        <li class="link">
+        <li>
             <a class="navLink" href="https://github.com/Mello-App">GitHub</a>
         </li>
-        <li class="link">
-            <a class="button" href="#download">Download</a>
+        <li>
+            <a class="downloadButton" href="#download">Download</a>
         </li>
     </ul>
 </nav>
