Section layout added
Switched some CSS to be more universal, fixed most section layout, more work to do still

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer>
     <div>
         <img src="{{ '/assets/img/logo_w.svg' | relative_url }}" />
         <h3 class="footer">Mello</h3>
