--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="heroBG">
+<header class="hero">
     {% include nav.html %}
-    <div class="hero">
-        <img class="heroImage" src="/assets/img/header.svg" rel="Mello logo on phone" />
-        <div class="heroContent">
+    <div class="section">
+        <img class="sectionImage" src="/assets/img/header.svg" rel="Mello logo on phone" />
+        <div class="sectionContent">
             <h1 class="hero">{{ site.title }}</h1>
             <h3 class="hero">{{ site.description }}</h3>
             <a class="downloadButton" href="#download">Download</a>
