--- a/_includes/sections/001.html
+++ b/_includes/sections/001.html
@@ -1,9 +1,9 @@
 <div class="section">
-    <div class="section-l">
-        <p class="sb px-28">A world of sounds</p>
-        <p class="m px-14">Mello features lots of content ranging from dreamy soundscapes to vivid stories, making it the perfect wind-down technique for when you’re feeling anxious.</p>
+    <div class="left">
+        <h2>A world of sounds</h2>
+        <p>Mello features lots of content ranging from dreamy soundscapes to vivid stories, making it the perfect wind-down technique for when you’re feeling anxious.</p>
     </div>
-    <div class="section-r">
+    <div class="right">
         <img src="../../assets/img/001.svg" />
     </div>
 </div>
