--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -1,35 +1,25 @@
-<div class="section d-sec">
-    <div class="section-l">
-        <img src="/assets/img/004.svg" rel="App on Android and iOS Preview" />
-    </div>
-    <div class="section-r">
-        <p class="px-28 sb">Get started</p>
-        <div class="section">
-            <div class="section-l">
-                <p class="px-14 m">Download the app</p>
-                <div>
-                    <a>
-                        <img src="/assets/img/android.svg" rel="Download for Android">
-                        <p class="px-12 m">Android</p>
-                        <p class="px-8 m g">currently in public beta</p>
-                    </a>
-                </div>
-                <div>
-                    <a>
-                        <img src="/assets/img/iphone.svg" rel="Download for iOS">
-                        <p class="px-12 m comingsoon">iPhone</p>
-                        <p class="px-8 m comingsoon-g">coming soon</p>
-                    </a>
-                </div>
+<div class="section">
+    <img class="left" src="/assets/img/004.svg" rel="App on Android and iOS Preview" />
+    <div class="right">
+        <h2>Get started</h2>
+        <div class="downloadApp">
+            <h3>Download the app</h3>
+            <div>
+                <img src="/assets/img/android.svg" rel="Android logo">
+                <a>Android</a>
+                <p class="subtext">currently in public beta</p>
             </div>
-            <div class="section-r">
-                <p class="px-14 m">Use the webapp</p>
-                <div>
-                    <a>
-                        <img src="/assets/img/launch.svg" rel="Use the Web App">
-                        <p class="px-12 m">Launch now</p>
-                    </a>
-                </div>
+            <div>
+                <img src="/assets/img/iphone.svg" rel="Apple Logo">
+                <a>iPhone</a>
+                <p class="subtext">coming soon</p>
+            </div>
+        </div>
+        <div class="downloadWeb">
+            <h3>Use the webapp</h3>
+            <div>
+                <img src="/assets/img/launch.svg" rel="Use the Web App">
+                <a>Launch now</a>
             </div>
         </div>
     </div>
