--- a/_includes/sections/002.html
+++ b/_includes/sections/002.html
@@ -1,9 +1,9 @@
 <div class="section">
-    <div class="section-l">
+    <div class="left">
         <img src="../../assets/img/002.svg" />
     </div>
-    <div class="section-r">
-        <p class="sb px-28">Lorem ipsum dolor sit amet</p>
-        <p class="m px-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Convallis sit blandit rhoncus urna, odio id eros, est nisl. Sit nunc nullam sed senectus fringilla sagittis interdum faucibus. Integer velit diam sed arcu dictum mauris, nullam elit, congue. In sed facilisis vestibulum, nunc viverra purus id ac id.</p>
+    <div class="right">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Convallis sit blandit rhoncus urna, odio id eros, est nisl. Sit nunc nullam sed senectus fringilla sagittis interdum faucibus. Integer velit diam sed arcu dictum mauris, nullam elit, congue. In sed facilisis vestibulum, nunc viverra purus id ac id.</p>
     </div>
 </div>
