--- a/_includes/sections/003.html
+++ b/_includes/sections/003.html
@@ -1,9 +1,9 @@
 <div class="section">
-    <div class="section-l">
-        <p class="sb px-28">Free and open-source</p>
-        <p class="m px-14">Designed with security and transparency in mind, Mello is built to serve your interests. That’s why we’ve open-sourced the app and omitted analytics. This is your safe space.</p>
+    <div class="left">
+        <h2>Free and open-source</h2>
+        <p>Designed with security and transparency in mind, Mello is built to serve your interests. That’s why we’ve open-sourced the app and omitted analytics. This is your safe space.</p>
     </div>
-    <div class="section-r">
+    <div class="right">
         <img src="../../assets/img/003.svg" />
     </div>
 </div>
