--- a/_scss/font.scss
+++ b/_scss/font.scss
@@ -1,67 +1,66 @@
 @charset 'utf-8';
-// Setting "Inter" as font and defaulting colour
 @import url('https://rsms.me/inter/inter.css');
 
 html { 
     font-family: 'Inter', sans-serif;
     color: #000;
 }
-
 h1 {
     font-size: 4em;
     margin: 0em;
     line-height: 1em;
+    letter-spacing: -0.02em;
+}
+h2 {
+    font-size:2.5em;
+    line-height: 1em;
+    letter-spacing: -0.02em;
 }
 h3 {
     font-size:1.5em;
     line-height: 1em;
+    letter-spacing: -0.02em;
+}
+p {
+    font-size: 1.2em;
+    line-height: 1.5em;
+    letter-spacing: -0.02em;
+    font-weight: 500;
 }
 
-/* Header */
+// Header
 h1.hero, h3.hero {
     color: #fff; 
     font-weight: 600;
+}
+
+// Navigation
+.navLink {
+    font-weight: 700;
     letter-spacing: -0.02em;
+    color: #fff;
+}
+
+// Download centre
+p.subtext {
+    font-size: 0.8em;
+    line-height: 0em;
 }
 
 // Footer
 h3.footer {
     color: #fff; 
     font-weight: 600;
-    letter-spacing: -0.02em;
 }
 p.footer {
     color: #ffffff99;
     font-weight: 500;
-    letter-spacing: -0.02em;
 }
-
-/* Font Colours */
-.comingsoon { color: rgba(0,0,0,.5); }
-.comingsoon-g {
-    color: rgba(0,0,0,.5);
-    opacity: 0.5;
-}
-.g { color: rgba(0,0,0,.6); }
-.navLink { color: #fff; }
-
-/* Font Sizes */
-
-/* Footer */
-.footer-g { color: rgba(255,255,255,0.6); }
-.footer-t { color: #fff; }
 
 /* Button */
 .downloadButton {
     color: #000;
     font-weight: 600;
     text-decoration: none;
-    letter-spacing: -0.02em;
-}
-
-/* Navigation */
-.navLink {
-    font-size: 1em;
-    font-weight: 700;
     letter-spacing: -0.02em;
 }
