scss Rewrite, we are now responsive

--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -1,25 +1,37 @@
-<div class="section">
-    <img class="left" src="/assets/img/004.svg" rel="App on Android and iOS Preview" />
-    <div class="right">
-        <h2>Get started</h2>
-        <div class="downloadApp">
-            <h3>Download the app</h3>
+<div class="section st1">
+    <div class="content">
+        <img src="/assets/img/004.svg" rel="App on Android and iOS Preview">
+        <div class="gsText">
+            <h2>Get started</h2>
             <div>
-                <img src="/assets/img/android.svg" rel="Android logo">
-                <a>Android</a>
-                <p class="subtext">currently in public beta</p>
-            </div>
-            <div>
-                <img src="/assets/img/iphone.svg" rel="Apple Logo">
-                <a>iPhone</a>
-                <p class="subtext">coming soon</p>
-            </div>
-        </div>
-        <div class="downloadWeb">
-            <h3>Use the webapp</h3>
-            <div>
-                <img src="/assets/img/launch.svg" rel="Use the Web App">
-                <a>Launch now</a>
+                <div class="useApp">
+                    <h3>Download the app</h3>
+                    <div>
+                        <img src="/assets/img/android.svg" rel="Android logo">
+                        <div>
+                            <a class="disabled">Android</a>
+                            <br>
+                            <small class="disabled">coming soon</small>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="/assets/img/iphone.svg" rel="Apple Logo">
+                        <div>
+                            <a class="disabled">iPhone</a>
+                            <br>
+                            <small class="disabled">coming soon</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="useApp">
+                    <h3>Use the webapp</h3>
+                    <div>
+                        <img src="/assets/img/launch.svg" rel="Open icon">
+                        <div>
+                            <a class="disabled">Launch now</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
