--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,7 @@
-<header class="hero">
+<header>
     {% include nav.html %}
-    <div class="section">
-        <img class="sectionImage" src="/assets/img/header.svg" rel="Mello logo on phone" />
-        <div class="sectionContent">
-            <h1 class="hero">{{ site.title }}</h1>
-            <h3 class="hero">{{ site.description }}</h3>
-            <a class="downloadButton" href="#download">Download</a>
-        </div>
+    <div class="content">
+        <h1>{{ page.title }}</h1>
     </div>
+    <div class="nav"></div>
 </header>
