--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,16 +1,8 @@
-<nav>
-    <ul class="links">
-        <li>
-            <a class="navLink" href="/">Home</a>
-        </li>
-        <li>
-            <a class="navLink" href="/team">Team</a>
-        </li>
-        <li>
-            <a class="navLink" href="https://github.com/Mello-App">GitHub</a>
-        </li>
-        <li>
-            <a class="downloadButton" href="#download">Download</a>
-        </li>
-    </ul>
-</nav>
+<div class="nav">
+    <h3>Mello</h3>
+    <div class="navlinks">
+        <a class="navlink" href="/">Home</a>
+        <a class="navlink" href="/team">Team</a>
+        <a class="navlink" target="_blank" href="https://github.com/Mello-App">GitHub</a>
+    </div>
+</div>
