--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
         <meta name="description" content="{{site.description}}" />
         <link rel="stylesheet" href="{{ '/assets/styles.css' | realtive_url }}" />
         <link rel="shortcut icon" href="{{ '/favicon.ico' }}" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         {{ content }}
