--- a/_scss/font.scss
+++ b/_scss/font.scss
@@ -5,62 +5,36 @@ html {
     font-family: 'Inter', sans-serif;
     color: #000;
 }
-h1 {
-    font-size: 4em;
-    margin: 0em;
-    line-height: 1em;
+
+.disabled {
+    opacity: 0.5;
+}
+
+h1, h2, p, a {
+    margin: 0.25em 0;
+}
+
+h3, h4, h5, h6 {
+    margin: 0.5em 0;
+}
+
+h1, h2, h3 {
+    font-weight: 600;
+    line-height: 1.25em;
     letter-spacing: -0.02em;
 }
-h2 {
-    font-size:2.5em;
-    line-height: 1em;
-    letter-spacing: -0.02em;
-}
-h3 {
-    font-size:1.5em;
-    line-height: 1em;
-    letter-spacing: -0.02em;
-}
-p {
-    font-size: 1.2em;
+
+p, a, li {
+    font-weight: 500;
     line-height: 1.5em;
-    letter-spacing: -0.02em;
-    font-weight: 500;
 }
 
-// Header
-h1.hero, h3.hero {
-    color: #fff; 
-    font-weight: 600;
-}
+h1 { font-size: 5em;}
+h2 { font-size: 4em;}
+h3 { font-size: 1.6em; }
 
-// Navigation
-.navLink {
-    font-weight: 700;
-    letter-spacing: -0.02em;
-    color: #fff;
-}
-
-// Download centre
-p.subtext {
-    font-size: 0.8em;
-    line-height: 0em;
-}
-
-// Footer
-h3.footer {
-    color: #fff; 
-    font-weight: 600;
-}
-p.footer {
-    color: #ffffff99;
-    font-weight: 500;
-}
-
-/* Button */
-.downloadButton {
-    color: #000;
-    font-weight: 600;
-    text-decoration: none;
-    letter-spacing: -0.02em;
+@media only screen and (max-width: 700px) {
+    h1 { font-size: 3em; line-height: 1.5em;}
+    h2 { font-size: 2em; line-height: 1.5em;}
+    h3 { font-size: 1.2em; }
 }
