--- a/_includes/home/001.html
+++ b/_includes/home/001.html
@@ -4,6 +4,6 @@
             <h2>A world of sounds</h2>
             <p>Mello features lots of content ranging from dreamy soundscapes to vivid stories, making it the perfect wind-down technique for when you’re feeling anxious.</p>
         </div>
-        <img src="/assets/img/001.svg">
+        <img src="assets/img/001.svg">
     </div>
 </div>
