--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,8 @@
         <title>{{page.title}} - {{site.title}}</title>
         <meta property="og:title" content="{{page.title}} - {{site.title}}" />
         <meta name="description" content="{{site.description}}" />
-        <link rel="stylesheet" href="{{ '/assets/styles.css' | realtive_url }}" />
+        <link rel="stylesheet" href="{{ 'assets/styles.css' | realtive_url }}" />
         <link rel="shortcut icon" href="{{ '/favicon.ico' }}" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         {{ content }}
