--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div>
-        <img src="assets/img/logo_w.svg">
+        <img src="{{ baseurl }}/assets/img/logo_w.svg">
         <h3 class="footer">Mello</h3>
     </div>
     <p class="footer">© 2020 Mello and individual contributors. Code licensed under the Apache 2.0 license. All other material is licensed under the CC BY-NC-ND license.</p>
