--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <div class="nav">
     <h3>Mello</h3>
     <div class="navlinks">
-        <a class="navlink" href="/">Home</a>
-        <a class="navlink" href="/team">Team</a>
+        <a class="navlink" href="{{ baseurl }}/">Home</a>
+        <a class="navlink" href="{{ baseurl }}//team">Team</a>
         <a class="navlink" target="_blank" href="https://github.com/Mello-App">GitHub</a>
     </div>
 </div>
