fix urls part 2

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
     <h3>Mello</h3>
     <div class="navlinks">
         <a class="navlink" href="{{ baseurl }}/">Home</a>
-        <a class="navlink" href="{{ baseurl }}//team">Team</a>
+        <a class="navlink" href="{{ baseurl }}/team">Team</a>
         <a class="navlink" target="_blank" href="https://github.com/Mello-App">GitHub</a>
     </div>
 </div>
