--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
         <title>{{page.title}} - {{site.title}}</title>
         <meta property="og:title" content="{{page.title}} - {{site.title}}" />
         <meta name="description" content="{{site.description}}" />
-        <link rel="stylesheet" href="{{ baseurl }}/assets/styles.css">
-        <link rel="shortcut icon" href="{{ baseurl }}/favicon.ico" />
+        <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles.css">
+        <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" />
     </head>
     <body>
         {{ content }}
