fix urls, attempt 3

--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -1,13 +1,13 @@
 <div class="section st1">
     <div class="content">
-        <img src="{{ baseurl }}/assets/img/004.svg" rel="App on Android and iOS Preview">
+        <img src="{{ site.baseurl }}/assets/img/004.svg" rel="App on Android and iOS Preview">
         <div class="gsText">
             <h2>Get started</h2>
             <div>
                 <div class="useApp">
                     <h3>Download the app</h3>
                     <div>
-                        <img src="{{ baseurl }}/assets/img/android.svg" rel="Android logo">
+                        <img src="{{ site.baseurl }}/assets/img/android.svg" rel="Android logo">
                         <div>
                             <a class="disabled">Android</a>
                             <br>
@@ -15,7 +15,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="{{ baseurl }}/assets/img/iphone.svg" rel="Apple Logo">
+                        <img src="{{ site.baseurl }}/assets/img/iphone.svg" rel="Apple Logo">
                         <div>
                             <a class="disabled">iPhone</a>
                             <br>
@@ -26,7 +26,7 @@
                 <div class="useApp">
                     <h3>Use the webapp</h3>
                     <div>
-                        <img src="{{ baseurl }}/assets/img/launch.svg" rel="Open icon">
+                        <img src="{{ site.baseurl }}/assets/img/launch.svg" rel="Open icon">
                         <div>
                             <a class="disabled">Launch now</a>
                         </div>
