--- a/_includes/home/003.html
+++ b/_includes/home/003.html
@@ -4,6 +4,6 @@
             <h2>Free and open-source</h2>
             <p>Designed with security and transparency in mind, Mello is built to serve your interests. That’s why we’ve open-sourced the app and omitted analytics. This is your safe space.</p>
         </div>
-        <img src="{{ site.baseurl }}/assets/img/003.svg">
+        <img src="{{ '/assets/img/003.svg' | relative_url }}">
     </div>
 </div>
