--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,7 +1,7 @@
 <header class="jumbotron">
     {% include nav.html %}
     <div class="content">
-        <img src="{{ site.baseurl }}/assets/img/header.svg">
+        <img src="{{ '/assets/img/header.svg' | relative_url }}">
         <div>
             <h1>{{ site.title }}</h1>
             <h3>{{ site.description }}</h3>
