--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <div class="nav">
     <h3>Mello</h3>
     <div class="navlinks">
-        <a class="navlink" href="{{ site.baseurl }}/">Home</a>
-        <a class="navlink" href="{{ site.baseurl }}/team">Team</a>
+        <a class="navlink" href="{{ '/' | relative_url }}">Home</a>
+        <a class="navlink" href="{{ '/team' | relative_url }}">Team</a>
         <a class="navlink" target="_blank" href="https://github.com/Mello-App">GitHub</a>
     </div>
 </div>
