--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>{{page.title}} - {{site.title}}</title>
-        <meta property="og:title" content="{{page.title}} - {{site.title}}" />
-        <meta name="description" content="{{site.description}}" />
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles.css">
-        <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" />
+        <meta property="og:title" content="{{page.title}} - {{site.title}}">
+        <meta name="description" content="{{site.description}}">
+        <link rel="stylesheet" href="{{ '/assets/styles.css' | relative_url }}">
+        <link rel="shortcut icon" href="{{ '/assets/img/logo_w.svg' | relative_url }}">
     </head>
     <body>
         {{ content }}
