--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
         <meta property="og:title" content="{{page.title}} - {{site.title}}">
         <meta name="description" content="{{site.description}}">
         <link rel="stylesheet" href="{{ '/assets/styles.css' | relative_url }}">
+        <link rel="stylesheet" href="https://cdn.doamatto.xyz/inter.min.css">
         <link rel="shortcut icon" href="{{ '/assets/img/logo_w.svg' | relative_url }}">
     </head>
     <body>
