Improved A11Y and readibility with alt tags and changing colours to fit AAA colour ratings

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,6 @@
     <div class="navlinks">
         <a class="navlink" href="{{ '/' | relative_url }}">Home</a>
         <a class="navlink" href="{{ '/team' | relative_url }}">Team</a>
-        <a class="navlink" target="_blank" href="https://github.com/Mello-App">GitHub</a>
+        <a class="navlink" target="_blank" href="https://github.com/Mello-App" rel="noreferrer">GitHub</a>
     </div>
 </div>
