--- a/_scss/font.scss
+++ b/_scss/font.scss
@@ -11,9 +11,7 @@ html {
     color: #000;
 }
 
-.disabled {
-    opacity: 0.5;
-}
+.disabled { color: #444; }
 
 h1, h2, p, a {
     margin: 0.25em 0;
