--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div>
-        <img src="{{ '/assets/img/logo_w.svg' | relative_url }}">
+        <img src="{{ '/assets/img/logo_w.svg' | relative_url }}" alt="Mello logo">
         <h3 class="footer">Mello</h3>
     </div>
     <p class="footer">© 2020 Mello and individual contributors. Code licensed under the Apache 2.0 license. All other material is licensed under the CC BY-NC-ND license.</p>
