--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,7 +1,7 @@
 <header class="jumbotron">
     {% include nav.html %}
     <div class="content">
-        <img src="{{ '/assets/img/header.svg' | relative_url }}">
+        <img src="{{ '/assets/img/header.svg' | relative_url }}" alt="Picture of the Mello app on a phone">
         <div>
             <h1>{{ site.title }}</h1>
             <h3>{{ site.description }}</h3>
