--- a/_includes/team/001.html
+++ b/_includes/team/001.html
@@ -1,34 +1,34 @@
 <div class="team">
     <div class="card">
-        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg">
+        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="Cyckl's logo">
         <div class="cardText">
             <h3>cyckl</h3>
             <p>Design, Front-End Dev</p>
         </div>
     </div>
     <div class="card">
-        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg">
+        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="doamatto's logo">
         <div class="cardText">
             <h3>doamatto</h3>
             <p>Full-Stack, Mobile Dev</p>
         </div>
     </div>
     <div class="card">
-        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg">
+        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="Rainpelt29's logo">
         <div class="cardText">
             <h3>Rainpelt29</h3>
             <p>Art, Writing</p>
         </div>
     </div>
     <div class="card">
-        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg">
+        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="sd_madness's logo">
         <div class="cardText">
             <h3>sd_madness</h3>
             <p>Art</p>
         </div>
     </div>
     <div class="card">
-        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg">
+        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="Ultra's logo">
         <div class="cardText">
             <h3>Ultra</h3>
             <p>Back-End Dev</p>
