Added personal logo

--- a/_includes/team/001.html
+++ b/_includes/team/001.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="card">
-        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="doamatto's logo">
+        <img class="cardPhoto" src="{{ '/assets/img/team/doamatto.svg' | relative_url }}" alt="doamatto's logo">
         <div class="cardText">
             <h3>doamatto</h3>
             <p>Full-Stack, Mobile Dev</p>
