Added Ultra's logo and links for portfolios

--- a/_includes/team/001.html
+++ b/_includes/team/001.html
@@ -1,37 +1,47 @@
 <div class="team">
     <div class="card">
-        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="Cyckl's logo">
-        <div class="cardText">
-            <h3>cyckl</h3>
-            <p>Design, Front-End Dev</p>
-        </div>
+        <a href="https://daniel.lleb.me">
+            <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="Cyckl's logo">
+            <div class="cardText">
+                <h3>cyckl</h3>
+                <p>Design, Front-End Dev</p>
+            </div>
+        </a>
     </div>
     <div class="card">
-        <img class="cardPhoto" src="{{ '/assets/img/team/doamatto.svg' | relative_url }}" alt="doamatto's logo">
-        <div class="cardText">
-            <h3>doamatto</h3>
-            <p>Full-Stack, Mobile Dev</p>
-        </div>
+        <a href="https://doamatto.xyz">
+            <img class="cardPhoto" src="{{ '/assets/img/team/doamatto.svg' | relative_url }}" alt="doamatto's logo">
+            <div class="cardText">
+                <h3>doamatto</h3>
+                <p>Full-Stack, Mobile Dev</p>
+            </div>
+        </a>
     </div>
     <div class="card">
-        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="Rainpelt29's logo">
-        <div class="cardText">
-            <h3>Rainpelt29</h3>
-            <p>Art, Writing</p>
-        </div>
+        <a href="https://raineplt29.github.io">
+            <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="Rainpelt29's logo">
+            <div class="cardText">
+                <h3>Rainpelt29</h3>
+                <p>Art, Writing</p>
+            </div>
+        </a>
     </div>
     <div class="card">
-        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="sd_madness's logo">
-        <div class="cardText">
-            <h3>sd_madness</h3>
-            <p>Art</p>
-        </div>
+        <a>
+            <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="sd_madness's logo">
+            <div class="cardText">
+                <h3>sd_madness</h3>
+                <p>Art</p>
+            </div>
+        </a>
     </div>
     <div class="card">
-        <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="Ultra's logo">
-        <div class="cardText">
-            <h3>Ultra</h3>
-            <p>Back-End Dev</p>
-        </div>
+        <a href="https://ultra03.ga">
+            <img class="cardPhoto" src="{{ '/assets/img/team/ultra.svg' | relative_url }}" alt="Ultra's logo">
+            <div class="cardText">
+                <h3>Ultra</h3>
+                <p>Back-End Dev</p>
+            </div>
+        </a>
     </div>
 </div>
