--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -116,11 +116,15 @@ div.team {
         flex-grow: 2;
         border-radius: 0.5em;
         margin: 1em;
-        > .cardPhoto { 
-            width: 100%;
-            border-radius: 0.4em 0.4em 0 0;
+        a {
+            text-decoration: none;
+            color: inherit;
+            > .cardPhoto {
+                width: 100%;
+                border-radius: 0.4em 0.4em 0 0;
+            }
+            > .cardText { padding: 1em; }
         }
-        > .cardText { padding: 1em; }
     }
 }
 
