--- a/_includes/home/003.html
+++ b/_includes/home/003.html
@@ -2,7 +2,7 @@
     <div class="content">
         <div>
             <h2>Free and open-source</h2>
-            <p>Designed with security and transparency in mind, Mello is built to serve your interests. That’s why we’ve open-sourced the app and omitted analytics. This is your safe space.</p>
+            <p>Designed with security and transparency in mind, Mello is built to treat people like people, not products. This is your safe space, and we're here to make sure it stays yours and yours alone.</p>
         </div>
         <img src="{{ '/assets/img/003.svg' | relative_url }}" alt="Placeholder image">
     </div>
