added two team icons

--- a/_includes/team/001.html
+++ b/_includes/team/001.html
@@ -1,7 +1,7 @@
 <div class="team">
     <div class="card">
         <a href="https://daniel.lleb.me">
-            <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="Cyckl's logo">
+            <img class="cardPhoto" src="{{ '/assets/img/team/cyckl.svg' | relative_url }}" alt="Cyckl's logo">
             <div class="cardText">
                 <h3>cyckl</h3>
                 <p>Design, Front-End Dev</p>
@@ -28,7 +28,7 @@
     </div>
     <div class="card">
         <a>
-            <img class="cardPhoto" src="https://networkingnerd.files.wordpress.com/2016/09/dumpsterfire2.jpg" alt="sd_madness's logo">
+            <img class="cardPhoto" src="{{ '/assets/img/team/sd_madness.jpeg' | relative_url }}" alt="sd_madness's logo">
             <div class="cardText">
                 <h3>sd_madness</h3>
                 <p>Art</p>
