--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -60,6 +60,9 @@ div.nav {
     margin: 0 2em;
     > div, > img {
         margin: 1em 2em;
+        @media only screen and (max-width: 950px) {
+            margin: 1em auto;
+        }
         max-width: 600pt;
     }
     > img {
