chore: adjusted roles and removed some members (;-;)

--- a/_includes/team/001.html
+++ b/_includes/team/001.html
@@ -1,7 +1,6 @@
 <div class="team">
-    {% TeamComponent img:"/assets/img/team/cyckl.svg" name:"cyckl" role:"Design, Front-End Dev" url:"https://cyckl.github.io" %}
-    {% TeamComponent img:"/assets/img/team/doamatto.svg" name:"doamatto" role:"Full-Stack, Mobile Dev" url:"https://doamatto.xyz" %}
-    {% TeamComponent img:"/assets/img/team/rainpelt.jpg" name:"Rainpelt29" role:"Art, Writing" url:"https://rainpelt29.github.io" %}
+    {% TeamComponent img:"/assets/img/team/cyckl.svg" name:"cyckl" role:"Design, Web Dev" url:"https://cyckl.github.io" %}
+    {% TeamComponent img:"/assets/img/team/doamatto.svg" name:"doamatto" role:"Full-Stack Dev, Android Dev" url:"https://doamatto.xyz" %}
     {% TeamComponent img:"/assets/img/team/sd_madness.jpeg" name:"sd_madness" role: "Art" url:"" %}
-    {% TeamComponent img:"/assets/img/team/ultra.svg" name:"Ultra" role:"Back-End Dev" url:"https://ultra03.ga" %}
+    {% TeamComponent img:"/assets/img/team/ultra.svg" name:"Ultra" role:"Back-End Dev, iOS Dev" url:"https://ultra03.ga" %}
 </div>
