--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer>
+    <a href="{{ '/privacy' | relative_url }}" title="View the privacy policy">Privacy.</a>
     <div>
         <img src="{{ '/assets/img/logo_w.svg' | relative_url }}" alt="Mello logo">
         <h3 class="footer">Mello</h3>
