--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,9 +1,7 @@
 @charset 'utf-8';
 
 html,
-body {
-    margin: 0;
-}
+body { margin: 0; }
 
 // Header
 header {
@@ -17,9 +15,7 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    &.jumbotron {
-        height: 90vh;
-    }
+    &.jumbotron { height: 90vh; }
 
 }
 
@@ -35,9 +31,7 @@ div.nav {
             text-decoration: none;
             color: #fff;
             margin-left: 10pt;
-            &:hover {
-                color: #6EE6C7;
-            }
+            &:hover { color: #6EE6C7; }
         }
     }
 }
@@ -47,9 +41,7 @@ div.nav {
     display: flex;
     justify-content: center;
     min-height: 75vh;
-    &.st1 {
-        background: #ddd;
-    }
+    &.st1 { background: #ddd; }
 }
 
 // Content block
@@ -60,22 +52,16 @@ div.nav {
     margin: 0 2em;
     > div, > img {
         margin: 1em 2em;
-        @media only screen and (max-width: 950px) {
-            margin: 1em auto;
-        }
+        @media (max-width: 950px) { margin: 1em auto; }
         max-width: 600pt;
     }
-    > img {
-        height: 40vh;
-    }
-    @media only screen and (max-width: 950px) {
+    > img { height: 40vh; }
+    @media (max-width: 950px) {
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
         div {
-            h1, h2, h3, p {
-                text-align: center;
-            }
+            h1, h2, h3, p { text-align: center; }
         }
     }
 }
@@ -89,12 +75,8 @@ div.nav {
             margin-right: 0.5em;
             min-height: 100%;
         }
-        > div {
-            margin: 0.25em 0;
-        }
-        > div > a {
-            line-height: 1em;
-        }
+        > div { margin: 0.25em 0; }
+        > div > a { line-height: 1em; }
     }
 }
 
