--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -94,9 +94,10 @@ div.nav {
 }
 
 div.gsText {
-    @media only screen and (max-width: 950px) {
-        order: -1;
-    }
+    @media (max-width: 950px) {
+        &,
+        div > .useApp * { text-align: left; } }
+    @media (max-width: 825px) { order: -1; }
 }
 
 // Team block
