fix: slight margin at the top of a card (unused space)

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -127,6 +127,7 @@ div.team {
         border-radius: 0.5em;
         margin: 1em;
         a {
+            margin: 0;
             text-decoration: none;
             color: inherit;
             > .cardPhoto {
