--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <meta name="description" content="{{site.description}}">
         <link rel="stylesheet" href="{{ '/assets/styles.css' | relative_url }}">
         <link rel="stylesheet" href="https://cdn.doamatto.xyz/inter.min.css">
-        <link rel="shortcut icon" href="{{ '/assets/img/logo_w.svg' | relative_url }}">
+        <link rel="shortcut icon" href="{{ '/assets/img/favicon.ico' | relative_url }}">
     </head>
     <body>
         {{ content }}
