--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -7,6 +7,7 @@ body {
     @media(prefers-color-scheme: 'dark') {
         background: #1b1b1b;
         color: #fff;
+        a { color: #fff; }
     }
 }
 
@@ -42,6 +43,9 @@ div.nav {
         }
     }
 }
+
+// Page content
+.content { margin: 1em 1em; }
 
 // Section block
 .section {
