--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="{{page.title}} - {{site.title}}">
         <meta name="description" content="{{site.description}}">
         <link rel="stylesheet" href="{{ '/assets/styles.css' | relative_url }}">
-        <link rel="stylesheet" href="https://cdn.doamatto.xyz/inter.min.css">
+        <link rel="stylesheet" href="https://cdn.doamatto.xyz/inter.min.css" integrity="sha384-qEZA/KrtbBoR2bh9+JzkzK+WdD0MRAHQ+GH+ABOTVhBeelVv3LjyMeGXXpmSvoGv" crossorigin="anonymous">
         <link rel="shortcut icon" href="{{ '/assets/img/favicon.ico' | relative_url }}">
     </head>
     <body>
